fix: align reviewer model defaults and CLI auth-check behavior